# quasi-1d-nozzle-simulator

./: .cursorrules  .gitignore  README.md  Untitled.ipynb  app.py  geometry.py  nozzle.py  nozzle_subsonic_v2.ipynb  nozzle_subsonic_v2_interactive.ipynb  packages.txt  pyproject.toml  requirements.txt  test_app.py
.github/: copilot-instructions.md
streamlit_app/: README.md  app.py  geometry.py  nozzle.py  test_app.py
