[project]
name = "test"
version = "0.1.0"
description = "Shaowu's first uv project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "scienceplots>=2.2.0",
    "scipy-stubs~=1.16.3",
    "ipywidgets>=8.1.8",
    "ipympl>=0.9.8",
    "streamlit>=1.52.2",
    "rocketisp>=0.1.11",
    "plotly>=5.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
